v3/installation/client-side-setup.mdx
---
title: Client-Side Setup
---

Once you have your [server-side framework configured](/v3/installation/server-side-setup), you then need to setup your client-side framework. Inertia currently provides support for React, Vue, and Svelte.

<Card
    icon="laravel"
    title="Laravel Starter Kits"
    href="https://laravel.com/docs/starter-kits"
    arrow="true"
    cta="Start building"
>
Laravel's starter kits provide out-of-the-box scaffolding for new Inertia applications.

These starter kits are the absolute fastest way to start building a new Inertia project using Laravel and Vue or React. However, if you would like to manually install Inertia into your application, please consult the documentation below.

</Card>

## Installation

<Steps>
    <Step title="Install dependencies">
        Install the Inertia client-side adapter and Vite plugin.

        <CodeGroup>
        ```bash Vue icon="vuejs"
        npm install @inertiajs/vue3 @inertiajs/vite
        ```

        ```bash React icon="react"
        npm install @inertiajs/react @inertiajs/vite
        ```

        ```bash Svelte icon="s"
        npm install @inertiajs/svelte @inertiajs/vite
        ```
        </CodeGroup>
    </Step>

    <Step title="Configure Vite">
        Add the Inertia plugin to your `vite.config.js` file.

        ```js vite.config.js
        import inertia from '@inertiajs/vite'
        import laravel from 'laravel-vite-plugin'
        import { defineConfig } from 'vite'

        export default defineConfig({
            plugins: [
                laravel({
                    input: ['resources/css/app.css', 'resources/js/app.js'],
                    refresh: true,
                }),
                inertia(),
            ],
        })
        ```
    </Step>

    <Step title="Initialize the Inertia app">
        Update your main JavaScript file to boot your Inertia app. The Vite plugin handles page resolution and mounting automatically, so a minimal entry point is all you need.

        <CodeGroup>
        ```js Vue icon="vuejs"
        import { createInertiaApp } from '@inertiajs/vue3'

        createInertiaApp()
        ```

        ```jsx React icon="react"
        import { createInertiaApp } from '@inertiajs/react'

        createInertiaApp()
        ```

        ```js Svelte icon="s"
        import { createInertiaApp } from '@inertiajs/svelte'

        createInertiaApp()
        ```
        </CodeGroup>

        The plugin generates a default resolver that looks for pages in both `./pages` and `./Pages` directories, and the app mounts automatically.
    </Step>

</Steps>

## Pages Shorthand

You may use the `pages` shorthand to customize which directory to search for page components.

<CodeGroup>

```js Vue icon="vuejs"
createInertiaApp({
    pages: './AppPages',
    // ...
})
```

```jsx React icon="react"
createInertiaApp({
    pages: './AppPages',
    // ...
})
```

```js Svelte icon="s"
createInertiaApp({
    pages: './AppPages',
    // ...
})
```

</CodeGroup>

An object may also be provided for more control over how pages are resolved.

```js
createInertiaApp({
    pages: {
        path: './Pages',
        extension: '.tsx',
        eager: false,
        transform: (name, page) => name.replace('/', '-'),
    },
})
```

| Option | Description |
|---|---|
| `path` | The directory to search for page components. |
| `extension` | A string or array of file extensions (e.g., `'.tsx'` or `['.tsx', '.jsx']`). Defaults to your framework's extension. |
| `eager` | Whether to use eager loading. Defaults to `true`. |
| `transform` | A callback that receives the page name and page object, returning a transformed name. |

## Configuring Defaults

You may pass a `defaults` object to `createInertiaApp()` to configure default settings for various features. You don't have to pass a default for every key, just the ones you want to tweak.

```js
createInertiaApp({
  // ...
  defaults: {
    form: {
      recentlySuccessfulDuration: 5000,
    },
    prefetch: {
      cacheFor: "1m",
      hoverDelay: 150,
    },
    visitOptions: (href, options) => {
      return {
        headers: {
          ...options.headers,
          "X-Custom-Header": "value",
        },
      };
    },
  },
});
```

The `visitOptions` callback receives the target URL and the current visit options, and should return an object with any options you want to override. For more details on the available configuration options, see the [forms](/v3/the-basics/forms#form-errors), [prefetching](/v3/data-props/prefetching), and [manual visits](/v3/the-basics/manual-visits#global-visit-options) documentation.

### Updating Configuration at Runtime

You may also update configuration values at runtime using the exported `config` instance. This is particularly useful when you need to adjust settings based on user preferences or application state.

<CodeGroup>

```js Vue icon="vuejs"
import { config } from "@inertiajs/vue3";

// Set a single value using dot notation...
config.set("form.recentlySuccessfulDuration", 1000);
config.set("prefetch.cacheFor", "5m");

// Set multiple values at once...
config.set({
  "form.recentlySuccessfulDuration": 1000,
  "prefetch.cacheFor": "5m",
});
```

```js React icon="react"
import { config } from "@inertiajs/react";

// Set a single value using dot notation...
config.set("form.recentlySuccessfulDuration", 1000);
config.set("prefetch.cacheFor", "5m");

// Set multiple values at once...
config.set({
  "form.recentlySuccessfulDuration": 1000,
  "prefetch.cacheFor": "5m",
});

// Get a configuration value...
const duration = config.get("form.recentlySuccessfulDuration");
```

```js Svelte icon="s"
import { config } from "@inertiajs/svelte";

// Set a single value using dot notation...
config.set("form.recentlySuccessfulDuration", 1000);
config.set("prefetch.cacheFor", "5m");

// Set multiple values at once...
config.set({
  "form.recentlySuccessfulDuration": 1000,
  "prefetch.cacheFor": "5m",
});

// Get a configuration value...
const duration = config.get("form.recentlySuccessfulDuration");
```

</CodeGroup>

## Defining a Root Element

By default, Inertia assumes that your application's root template has a root element with an `id` of `app`. If your application's root element has a different `id`, you can provide it using the `id` property.

```js
createInertiaApp({
  id: "my-app",
  // ...
});
```

If you change the `id` of the root element, be sure to update it [server-side](/v3/installation/server-side-setup#root-template) as well.

## HTTP Client

Inertia uses a built-in XHR client for all requests. No additional HTTP libraries like Axios are required.

### Using Axios

If your application relies on Axios interceptors or a custom Axios instance, you may provide the `axiosAdapter` as the `http` option when creating your Inertia app.

```js
import { axiosAdapter } from '@inertiajs/core'

createInertiaApp({
    // ...
    http: axiosAdapter(),
})
```

A custom Axios instance may also be provided to the adapter.

```js
import axios from 'axios'
import { axiosAdapter } from '@inertiajs/core'

const instance = axios.create({
    baseURL: '/api',
})

instance.interceptors.request.use(/* ... */)

createInertiaApp({
    // ...
    http: axiosAdapter(instance),
})
```

## Manual Setup

If you prefer not to use the Vite plugin, you may provide the `resolve` and `setup` callbacks manually. The `resolve` callback tells Inertia how to load a page component, and the `setup` callback initializes the client-side framework.

<CodeGroup>

```js Vue icon="vuejs"
import { createApp, h } from 'vue'
import { createInertiaApp } from '@inertiajs/vue3'

createInertiaApp({
    resolve: name => {
        const pages = import.meta.glob('./Pages/**/*.vue', { eager: true })
        return pages[`./Pages/${name}.vue`]
    },
    setup({ el, App, props, plugin }) {
        createApp({ render: () => h(App, props) })
            .use(plugin)
            .mount(el)
    },
})
```

```jsx React icon="react"
import { createInertiaApp } from '@inertiajs/react'
import { createRoot } from 'react-dom/client'

createInertiaApp({
    resolve: name => {
        const pages = import.meta.glob('./Pages/**/*.jsx', { eager: true })
        return pages[`./Pages/${name}.jsx`]
    },
    setup({ el, App, props }) {
        createRoot(el).render(<App {...props} />)
    },
})
```

```js Svelte icon="s"
import { createInertiaApp } from '@inertiajs/svelte'
import { mount } from 'svelte'

createInertiaApp({
    resolve: name => {
        const pages = import.meta.glob('./Pages/**/*.svelte', { eager: true })
        return pages[`./Pages/${name}.svelte`]
    },
    setup({ el, App, props }) {
        mount(App, { target: el, props })
    },
})
```

</CodeGroup>

By default we recommend eager loading your components, which will result in a single JavaScript bundle. However, if you'd like to lazy-load your components, see our [code splitting](/v3/advanced/code-splitting) documentation.
